# gnomebuildersimpletexteditor

./: README.md  meson.build  org.gnome.Simpletexteditor.json
data/: meson.build  org.gnome.Simpletexteditor.appdata.xml.in  org.gnome.Simpletexteditor.desktop.in  org.gnome.Simpletexteditor.gschema.xml
po/: POTFILES  meson.build
src/: main.cpp  meson.build  simpletexteditor-window.cpp  simpletexteditor-window.h  simpletexteditor-window.ui  simpletexteditor.gresource.xml
